--- a/assets/css/introduce.css
+++ b/assets/css/introduce.css
@@ -91,27 +91,27 @@
 
 .summary .company {
   padding-bottom: 40px; }
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     .summary .company {
       padding-bottom: 20px; } }
   .summary .company .info p {
     font-size: 16px;
     color: #6c6c6c;
     line-height: 29px; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .summary .company .info p {
         font-size: 13px;
         line-height: 18px; } }
   .summary .company .info .table-wrap {
     margin-top: 35px; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .summary .company .info .table-wrap {
         margin-top: 20px; } }
     .summary .company .info .table-wrap .table.table-bordered {
       margin-bottom: 0;
       border: 0;
       border-top: 3px solid #333; }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         .summary .company .info .table-wrap .table.table-bordered {
           border-top: 2px solid #333; } }
       .summary .company .info .table-wrap .table.table-bordered tbody th {
@@ -124,12 +124,12 @@
         border-left: 0;
         border-color: #bbb;
         background-color: #fafafa; }
-        @media (max-width: 992px) {
+        @media (max-width: 991px) {
           .summary .company .info .table-wrap .table.table-bordered tbody th {
             font-size: 13px; } }
         .summary .company .info .table-wrap .table.table-bordered tbody th small {
           font-size: 12px; }
-          @media (max-width: 992px) {
+          @media (max-width: 991px) {
             .summary .company .info .table-wrap .table.table-bordered tbody th small {
               font-size: 10px; } }
       .summary .company .info .table-wrap .table.table-bordered tbody td {
@@ -140,10 +140,10 @@
         border-color: #bbb;
         border-right: 0;
         vertical-align: middle; }
-        @media (max-width: 992px) {
+        @media (max-width: 991px) {
           .summary .company .info .table-wrap .table.table-bordered tbody td {
             font-size: 13px; } }
-        @media (max-width: 768px) {
+        @media (max-width: 767px) {
           .summary .company .info .table-wrap .table.table-bordered tbody td {
             letter-spacing: -1px;
             padding-left: 10px; } }
@@ -157,17 +157,17 @@
     background-image: url(/assets/images/introduce/summary_bg.jpg);
     background-repeat: no-repeat;
     background-position: 50% 0; }
-    @media (max-width: 1200px) {
+    @media (max-width: 1199px) {
       .summary .company .motto {
         margin-left: 30px; } }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .summary .company .motto {
         width: 100%;
         margin-left: 0;
         margin-top: 30px;
         background-size: cover;
         background-position: 50% 100%; } }
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
       .summary .company .motto {
         height: 300px; } }
     .summary .company .motto hr {
@@ -175,7 +175,7 @@
       display: inline-block;
       margin: 100px 0 30px;
       border-top: 3px solid #fff; }
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         .summary .company .motto hr {
           width: 160px;
           margin: 70px 0 30px; } }
@@ -184,14 +184,14 @@
       color: #fff;
       line-height: 50px;
       text-align: center; }
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         .summary .company .motto ul li {
           font-size: 29px;
           line-height: 40px; } }
 
 .group {
   padding-bottom: 40px; }
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     .group {
       padding-bottom: 0; } }
   .group .section-content .group-table-img {
@@ -204,7 +204,7 @@
 
 .location {
   padding-bottom: 40px; }
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     .location {
       padding-bottom: 0; } }
   .location .section-content .maps {
@@ -216,7 +216,7 @@
     border-right: 1px solid #ccc; }
     .location .section-content .inquiry-info li:last-child {
       border: 0; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .location .section-content .inquiry-info li {
         text-align: center;
         border-right: 0;
@@ -233,13 +233,13 @@
       text-align: center;
       margin-bottom: 15px;
       padding-top: 67px; }
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         .location .section-content .inquiry-info li div h4 {
           font-size: 18px;
           margin-bottom: 10px; } }
     .location .section-content .inquiry-info li div dl {
       overflow: hidden; }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         .location .section-content .inquiry-info li div dl {
           display: inline-block;
           padding-left: 0 !important;
@@ -251,7 +251,7 @@
         color: #333;
         line-height: 29px;
         font-weight: 400px; }
-        @media (max-width: 768px) {
+        @media (max-width: 767px) {
           .location .section-content .inquiry-info li div dl dt {
             font-size: 13px;
             line-height: 20px; } }
@@ -261,7 +261,7 @@
         color: #6b6b6b;
         line-height: 29px;
         font-weight: 400px; }
-        @media (max-width: 768px) {
+        @media (max-width: 767px) {
           .location .section-content .inquiry-info li div dl dd {
             font-size: 13px;
             line-height: 18px; } }
@@ -271,7 +271,7 @@
       background-position: 50% 0; }
     .location .section-content .inquiry-info li .office dl {
       padding-left: 48px; }
-      @media (max-width: 1200px) {
+      @media (max-width: 1199px) {
         .location .section-content .inquiry-info li .office dl {
           padding-left: 15px; } }
       .location .section-content .inquiry-info li .office dl dt {
@@ -282,7 +282,7 @@
       background-position: 50% 0; }
     .location .section-content .inquiry-info li .call-center dl {
       padding-left: 90px; }
-      @media (max-width: 1200px) {
+      @media (max-width: 1199px) {
         .location .section-content .inquiry-info li .call-center dl {
           padding-left: 60px; } }
       .location .section-content .inquiry-info li .call-center dl dt {
@@ -293,7 +293,7 @@
       background-position: 50% 0; }
     .location .section-content .inquiry-info li .email-inquiry dl {
       padding-left: 65px; }
-      @media (max-width: 1200px) {
+      @media (max-width: 1199px) {
         .location .section-content .inquiry-info li .email-inquiry dl {
           padding-left: 45px; } }
       .location .section-content .inquiry-info li .email-inquiry dl dt {
@@ -301,7 +301,7 @@
 
 .history {
   padding-bottom: 40px; }
-@midea (max-width: $md) {
+@midea (max-width: $md - 1) {
   .history {
     padding-bottom: 0; } }
   .history .section-content .geumdo-history .present h4 {
@@ -311,13 +311,13 @@
     font-weight: 300;
     padding-top: 29px;
     border-top: 2px solid #d90c1c; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .history .section-content .geumdo-history .present h4 {
         font-size: 18px;
         padding-top: 20px; } }
   .history .section-content .geumdo-history .present .present-dl {
     border-top: 2px solid #333; }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .history .section-content .geumdo-history .present .present-dl {
         border-top: 0; } }
   .history .section-content .geumdo-history .present dl {
@@ -327,10 +327,10 @@
     border-bottom: 1px dotted #ccc; }
     .history .section-content .geumdo-history .present dl:last-child {
       border-bottom: 0; }
-    @media (max-width: 1200px) {
+    @media (max-width: 1199px) {
       .history .section-content .geumdo-history .present dl {
         margin-left: -5px; } }
-    @media (max-width: 992px) {
+    @media (max-width: 991px) {
       .history .section-content .geumdo-history .present dl {
         margin-left: 0;
         padding: 20px 0; } }
@@ -342,7 +342,7 @@
       color: #333;
       font-weight: 400;
       vertical-align: top; }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         .history .section-content .geumdo-history .present dl dt {
           font-size: 13px; } }
       .history .section-content .geumdo-history .present dl dt:before {
@@ -362,7 +362,7 @@
         font-weight: 400;
         vertical-align: top;
         margin-top: 3px; }
-        @media (max-width: 992px) {
+        @media (max-width: 991px) {
           .history .section-content .geumdo-history .present dl dd ol li h5 {
             font-size: 13px;
             margin-top: 2px; } }
@@ -374,7 +374,7 @@
         line-height: 29px;
         margin-top: -2px;
         letter-spacing: -1px; }
-        @media (max-width: 992px) {
+        @media (max-width: 991px) {
           .history .section-content .geumdo-history .present dl dd ol li p {
             font-size: 13px;
             line-height: 22px; } }
@@ -388,7 +388,7 @@
       color: #d90c1c;
       font-weight: 300;
       padding-top: 29px; }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         .history .section-content .geumdo-history .history-info h4 {
           font-size: 18px;
           padding-top: 20px; } }
@@ -399,10 +399,10 @@
       border-bottom: 1px dotted #ccc; }
       .history .section-content .geumdo-history .history-info dl:last-child {
         border-bottom: 0; }
-      @media (max-width: 1200px) {
+      @media (max-width: 1199px) {
         .history .section-content .geumdo-history .history-info dl {
           margin-left: -5px; } }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         .history .section-content .geumdo-history .history-info dl {
           margin-left: 0;
           padding: 20px 0; } }
@@ -414,7 +414,7 @@
         color: #333;
         font-weight: 400;
         vertical-align: top; }
-        @media (max-width: 992px) {
+        @media (max-width: 991px) {
           .history .section-content .geumdo-history .history-info dl dt {
             font-size: 13px; } }
         .history .section-content .geumdo-history .history-info dl dt:before {
@@ -434,7 +434,7 @@
           font-weight: 400;
           vertical-align: top;
           margin-top: 3px; }
-          @media (max-width: 992px) {
+          @media (max-width: 991px) {
             .history .section-content .geumdo-history .history-info dl dd ol li h5 {
               font-size: 13px;
               margin-top: 2px; } }
@@ -446,7 +446,7 @@
           line-height: 29px;
           margin-top: -2px;
           letter-spacing: -1px; }
-          @media (max-width: 992px) {
+          @media (max-width: 991px) {
             .history .section-content .geumdo-history .history-info dl dd ol li p {
               font-size: 13px;
               line-height: 22px; } }
@@ -460,17 +460,17 @@
       text-align: left;
       margin-bottom: 50px;
       margin-top: -10px; }
-      @media (max-width: 1200px) {
+      @media (max-width: 1199px) {
         .history .section-content .geumdo-history .challenge p {
           font-size: 24px;
           margin-top: 30px;
           margin-bottom: 30px; } }
-      @media (max-width: 992px) {
+      @media (max-width: 991px) {
         .history .section-content .geumdo-history .challenge p {
           font-size: 18px; } }
     .history .section-content .geumdo-history .challenge span {
       display: block; }
-      @media (max-width: 768px) {
+      @media (max-width: 767px) {
         .history .section-content .geumdo-history .challenge span {
           padding: 0 30px; } }
       .history .section-content .geumdo-history .challenge span img {
