--- a/assets/css/introduce.scss
+++ b/assets/css/introduce.scss
@@ -58,7 +58,6 @@
             }
         }
         .geumdo-ceo {
-            //margin-top: 255px;
             margin-top: 55px;
             @media (max-width: $sm - 1) {
                 margin-top: 30px;
@@ -101,7 +100,7 @@
 .summary {
     .company {
         padding-bottom: 40px;
-        @media (max-width: $sm) {
+        @media (max-width: $sm - 1) {
             padding-bottom: 20px;
         }
         .info {
@@ -109,21 +108,21 @@
                 font-size: 16px;
                 color: #6c6c6c;
                 line-height: 29px;
-                @media (max-width: $md) {
+                @media (max-width: $md - 1) {
                     font-size: 13px;
                     line-height: 18px;
                 }
             }
             .table-wrap {
                 margin-top: 35px;
-                @media (max-width: $md) {
+                @media (max-width: $md - 1) {
                     margin-top: 20px;
                 }
                 .table.table-bordered {
                     margin-bottom: 0;
                     border: 0;
                     border-top: 3px solid #333;
-                    @media (max-width: $md) {
+                    @media (max-width: $md - 1) {
                         border-top: 2px solid #333;
                     }
                     tbody {
@@ -137,12 +136,12 @@
                             border-left: 0;
                             border-color: #bbb;
                             background-color: #fafafa;
-                            @media (max-width: $md) {
+                            @media (max-width: $md - 1) {
                                 font-size: 13px;
                             }
                             small {
                                 font-size: 12px;
-                                @media (max-width: $md) {
+                                @media (max-width: $md - 1) {
                                     font-size: 10px;
                                 }
                             }
@@ -155,10 +154,10 @@
                             border-color: #bbb;
                             border-right: 0;
                             vertical-align: middle;
-                            @media (max-width: $md) {
+                            @media (max-width: $md - 1) {
                                 font-size: 13px;
                             }
-                            @media (max-width: $sm) {
+                            @media (max-width: $sm - 1) {
                                 letter-spacing: -1px;
                                 padding-left: 10px;
                             }
@@ -178,17 +177,17 @@
             background-image: url(/assets/images/introduce/summary_bg.jpg);
             background-repeat: no-repeat;
             background-position: 50% 0;
-            @media (max-width: $lg) {
+            @media (max-width: $lg - 1) {
                 margin-left: 30px;
             }
-            @media (max-width: $md) {
+            @media (max-width: $md - 1) {
                 width: 100%;
                 margin-left: 0;
                 margin-top: 30px;
                 background-size: cover;
                 background-position: 50% 100%;
             }
-            @media (max-width: $sm) {
+            @media (max-width: $sm - 1) {
                 height: 300px;
             }
             hr {
@@ -196,7 +195,7 @@
                 display: inline-block;
                 margin: 100px 0 30px;
                 border-top: 3px solid #fff;
-                @media (max-width: $sm) {
+                @media (max-width: $sm - 1) {
                     width: 160px;
                     margin: 70px 0 30px;
                 }
@@ -207,7 +206,7 @@
                     color: #fff;
                     line-height: 50px;
                     text-align: center;
-                    @media (max-width: $sm) {
+                    @media (max-width: $sm - 1) {
                         font-size: 29px;
                         line-height: 40px;
                     }
@@ -218,7 +217,7 @@
 }
 .group {
     padding-bottom: 40px;
-    @media (max-width: $md) {
+    @media (max-width: $md - 1) {
         padding-bottom: 0;
     }
     .section-content {
@@ -235,7 +234,7 @@
 }
 .location {
     padding-bottom: 40px;
-    @media (max-width: $md) {
+    @media (max-width: $md - 1) {
         padding-bottom: 0;
     }
     .section-content {
@@ -252,7 +251,7 @@
                 &:last-child {
                     border: 0;
                 }
-                @media (max-width: $md) {
+                @media (max-width: $md - 1) {
                     text-align: center;
                     border-right: 0;
                     border-bottom: 1px solid #ccc;
@@ -271,14 +270,14 @@
                         text-align: center;
                         margin-bottom: 15px;
                         padding-top: 67px;
-                        @media (max-width: $sm) {
+                        @media (max-width: $sm - 1) {
                             font-size: 18px;
                             margin-bottom: 10px;
                         }
                     }
                     dl {
                         overflow: hidden;
-                        @media (max-width: $md) {
+                        @media (max-width: $md - 1) {
                             display: inline-block;
                             padding-left: 0 !important;
                             text-align: left;
@@ -290,7 +289,7 @@
                             color: #333;
                             line-height: 29px;
                             font-weight: 400px;
-                            @media (max-width: $sm) {
+                            @media (max-width: $sm - 1) {
                                 font-size: 13px;
                                 line-height: 20px;
                             }
@@ -301,7 +300,7 @@
                             color: #6b6b6b;
                             line-height: 29px;
                             font-weight: 400px;
-                            @media (max-width: $sm) {
+                            @media (max-width: $sm - 1) {
                                 font-size: 13px;
                                 line-height: 18px;
                             }
@@ -316,7 +315,7 @@
                     }
                     dl {
                         padding-left: 48px;
-                        @media (max-width: $lg) {
+                        @media (max-width: $lg - 1) {
                             padding-left: 15px;
                         }
                         dt {
@@ -332,7 +331,7 @@
                     }
                     dl {
                         padding-left: 90px;
-                        @media (max-width: $lg) {
+                        @media (max-width: $lg - 1) {
                             padding-left: 60px;
                         }
                         dt {
@@ -348,7 +347,7 @@
                     }
                     dl {
                         padding-left: 65px;
-                        @media (max-width: $lg) {
+                        @media (max-width: $lg - 1) {
                             padding-left: 45px;
                         }
                         dt {
@@ -362,7 +361,7 @@
 }
 .history {
     padding-bottom: 40px;
-    @midea (max-width: $md) {
+    @midea (max-width: $md - 1) {
         padding-bottom: 0;
     }
     .section-content {
@@ -375,14 +374,14 @@
                     font-weight: 300;
                     padding-top: 29px;
                     border-top: 2px solid $rc;
-                    @media (max-width: $md) {
+                    @media (max-width: $md - 1) {
                         font-size: 18px;
                         padding-top: 20px;
                     }
                 }
                 .present-dl {
                     border-top: 2px solid #333;
-                    @media (max-width: $md) {
+                    @media (max-width: $md - 1) {
                         border-top: 0;
                     }
                 }
@@ -394,10 +393,10 @@
                     &:last-child {
                         border-bottom: 0;
                     }
-                    @media (max-width: $lg) {
+                    @media (max-width: $lg - 1) {
                         margin-left: -5px;
                     }
-                    @media (max-width: $md) {
+                    @media (max-width: $md - 1) {
                         margin-left: 0;
                         padding: 20px 0;
                     }
@@ -409,7 +408,7 @@
                         color: #333;
                         font-weight: 400;
                         vertical-align: top;
-                        @media (max-width: $md) {
+                        @media (max-width: $md - 1) {
                             font-size: 13px;
                         }
                         &:before {
@@ -434,7 +433,7 @@
                                     font-weight: 400;
                                     vertical-align: top;
                                     margin-top: 3px;
-                                    @media (max-width: $md) {
+                                    @media (max-width: $md - 1) {
                                         font-size: 13px;
                                         margin-top: 2px;
                                     }
@@ -447,7 +446,7 @@
                                     line-height: 29px;
                                     margin-top: -2px;
                                     letter-spacing: -1px;
-                                    @media (max-width: $md) {
+                                    @media (max-width: $md - 1) {
                                         font-size: 13px;
                                         line-height: 22px;
                                     }
@@ -468,7 +467,7 @@
                     color: $rc;
                     font-weight: 300;
                     padding-top: 29px;
-                    @media (max-width: $md) {
+                    @media (max-width: $md - 1) {
                         font-size: 18px;
                         padding-top: 20px;
                     }
@@ -481,10 +480,10 @@
                     &:last-child {
                         border-bottom: 0;
                     }
-                    @media (max-width: $lg) {
+                    @media (max-width: $lg - 1) {
                         margin-left: -5px;
                     }
-                    @media (max-width: $md) {
+                    @media (max-width: $md - 1) {
                         margin-left: 0;
                         padding: 20px 0;
                     }
@@ -496,7 +495,7 @@
                         color: #333;
                         font-weight: 400;
                         vertical-align: top;
-                        @media (max-width: $md) {
+                        @media (max-width: $md - 1) {
                             font-size: 13px;
                         }
                         &:before {
@@ -521,7 +520,7 @@
                                     font-weight: 400;
                                     vertical-align: top;
                                     margin-top: 3px;
-                                    @media (max-width: $md) {
+                                    @media (max-width: $md - 1) {
                                         font-size: 13px;
                                         margin-top: 2px;
                                     }
@@ -534,7 +533,7 @@
                                     line-height: 29px;
                                     margin-top: -2px;
                                     letter-spacing: -1px;
-                                    @media (max-width: $md) {
+                                    @media (max-width: $md - 1) {
                                         font-size: 13px;
                                         line-height: 22px;
                                     }
@@ -554,18 +553,18 @@
                     text-align: left;
                     margin-bottom: 50px;
                     margin-top: -10px;
-                    @media (max-width: $lg) {
+                    @media (max-width: $lg - 1) {
                         font-size: 24px;
                         margin-top: 30px;
                         margin-bottom: 30px;
                     }
-                    @media (max-width: $md) {
+                    @media (max-width: $md - 1) {
                         font-size: 18px;
                     }
                 }
                 span {
                     display: block;
-                    @media (max-width: $sm) {
+                    @media (max-width: $sm - 1) {
                         padding: 0 30px;
                     }
                     img {
