--- a/assets/css/promotion.scss
+++ b/assets/css/promotion.scss
@@ -1,7 +1,7 @@
 @import 'common';
 .rnd {
     padding-bottom: 40px;
-    @media (max-width: $sm) {
+    @media (max-width: $sm - 1) {
         padding-bottom: 0;
     }
     .section-content {
@@ -11,7 +11,7 @@
             line-height: 29px;
             text-align: center;
             margin-bottom: 50px;
-            @media (max-width: $sm) {
+            @media (max-width: $sm - 1) {
                 font-size: 14px;
                 line-height: 20px;
                 text-align: left;
@@ -19,7 +19,7 @@
             }
         }
         .rnd-img {
-            @media (max-width: $sm) {
+            @media (max-width: $sm - 1) {
                 padding: 0 15px;
             }
             img {
@@ -30,7 +30,7 @@
 }
 .partner {
     padding-bottom: 40px;
-    @media (max-width: $sm) {
+    @media (max-width: $sm - 1) {
         padding-bottom: 0;
     }
     .partner-relative {
@@ -40,7 +40,7 @@
             padding-left: 30px;
             border-left: 4px solid $rc;
             margin-bottom: 20px;
-            @media (max-width: $sm) {
+            @media (max-width: $sm - 1) {
                 font-size: 18px;
                 margin-bottom: 15px;
                 padding-left: 15px;
@@ -49,21 +49,21 @@
         }
         .partner-info {
             margin-bottom: 70px;
-            @media (max-width: $md) {
+            @media (max-width: $md - 1) {
                 margin-bottom: 40px;
             }
             &:last-child {
                 margin-bottom: 0;
             }
             .table-wrap {
-                @media (max-width: $md) {
+                @media (max-width: $md - 1) {
                     margin-bottom: 30px;
                 }
                 .table {
                     margin-bottom: 0;
                     border: 0;
                     border-top: 3px solid #333;
-                    @media(max-width: $sm) {
+                    @media(max-width: $sm - 1) {
                         border-top: 2px solid #333;
                     }
                     tbody {
@@ -78,7 +78,7 @@
                                 border-right: 0;
                                 border-color: #bbb;
                                 background-color: #fafafa;
-                                @media(max-width: $sm) {
+                                @media(max-width: $sm - 1) {
                                     font-size: 12px;
                                 }
                             }
@@ -89,7 +89,7 @@
                                 border-right: 0;
                                 vertical-align: middle;
                                 border-color: #bbb;
-                                @media(max-width: $sm) {
+                                @media(max-width: $sm - 1) {
                                     font-size: 12px;
                                     padding: 5px;
                                     letter-spacing: -1px;
@@ -171,7 +171,22 @@
         }
     }
 }
-
+.geumdo-ci {
+    .section-content {
+        > p {
+            font-size: 16px;
+            color: #6c6c6c;
+            line-height: 29px;
+        }
+        .ci-rogo {
+            width: 100%;
+            height: 440px;
+            margin-top: 70px;
+            border: 1px solid #ddd;
+            background-image: url(/assets/images/promotion/ci_bg.gif);
+        }
+    }
+}
 
 
 
